<resources>
    <string name="app_name">ManagerService</string>
    <string name="action_settings">Settings</string>
    <string name="menu_scan">ConnectServer</string>
    <string name="menu_about">About</string>
    <string name="menu_clear">Clear</string>
    <string name="chatgroup">ChatGroup</string>
    <string name="personalstorage">PersonalStorage</string>
    <string name="hashaddressmapping">HashAddressMapping</string>
    <string name="createBtn">CreateService</string>
    <string name="restartBtn">RestartService</string>
    <string name="server_not_connect">Please connect server!</string>
    <string name="server_connect_failed">Server connect failed!</string>
    <string name="server_connected">Server connected!</string>

</resources>
